--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "craco": "^0.0.3",
     "craco-sass-resources-loader": "^1.1.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "json-loader": "^0.5.7",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
