--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-intersection-observer": "^8.34.0",
     "react-scripts": "5.0.0",
     "sass": "^1.50.0",
     "sass-resources-loader": "^2.2.4",
