--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-intersection-observer": "^8.34.0",
+    "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
     "sass-resources-loader": "^2.2.4",
     "typescript": "^4.6.3",
