--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.26",
     "@types/react-redux": "^7.1.24",
     "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^8.3.4",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "craco": "^0.0.3",
     "craco-sass-resources-loader": "^1.1.0",
@@ -31,6 +32,7 @@
     "sass": "^1.50.0",
     "sass-resources-loader": "^2.2.4",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
