--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^8.34.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
