--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^8.3.4",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "craco": "^0.0.3",
     "craco-sass-resources-loader": "^1.1.0",
+    "effector": "^22.3.0",
+    "effector-react": "^22.0.6",
     "eslint-plugin-react-hooks": "^4.4.0",
     "json-loader": "^0.5.7",
     "node-sass": "^7.0.1",
@@ -24,6 +27,8 @@
     "react-dom": "^18.0.0",
     "react-intersection-observer": "^8.34.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
