--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^8.3.4",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
+    "classnames": "^2.3.1",
     "craco": "^0.0.3",
     "craco-sass-resources-loader": "^1.1.0",
     "effector": "^22.3.0",
